<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".Register">

    <TextView
        android:id="@+id/tv_Regiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/regiter_movie"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="80dp"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Regiter" />

    <TextView
        android:id="@+id/tv_Year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="51dp"
        android:text="@string/year"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/tv_Director"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="1dp"
        android:text="@string/director"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/et_Director2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:text="@string/cast"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Director" />

    <TextView
        android:id="@+id/tv_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:text="@string/rating"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Cast" />

    <TextView
        android:id="@+id/tv_Review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/review"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/et_Review2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_movie_title"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Regiter" />

    <EditText
        android:id="@+id/et_Year2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_the_year_of_release"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title2" />

    <EditText
        android:id="@+id/et_Director2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_the_name_of_director"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Year2" />

    <EditText
        android:id="@+id/et_Cast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_cast"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Director2" />

    <EditText
        android:id="@+id/et_Rating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/rate_the_movie_1_10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Cast2" />

    <EditText
        android:id="@+id/et_Review2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_your_review"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Rating2" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:onClick="save"
        android:text="@string/save"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>