<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".EditMovie">

    <TextView
        android:id="@+id/tv_Regiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/regiter_movie"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="78dp"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/et_Year2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_Regiter" />

    <TextView
        android:id="@+id/tv_Year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="49dp"
        android:text="@string/year"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/director"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_Director2" />

    <TextView
        android:id="@+id/tv_Cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="39dp"
        android:text="@string/cast"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Director" />

    <TextView
        android:id="@+id/tv_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/rating"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/et_Rating2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_Review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="25dp"
        android:text="@string/review"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/tv_fav"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Regiter" />

    <EditText
        android:id="@+id/et_Year2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title2" />

    <EditText
        android:id="@+id/et_Director2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Year2" />

    <EditText
        android:id="@+id/et_Cast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Director2" />

    <EditText
        android:id="@+id/et_Rating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Cast2" />

    <EditText
        android:id="@+id/et_Review2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Rating2" />

    <TextView
        android:id="@+id/tv_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="6dp"
        android:text="@string/favorite"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_fav"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Review2" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="23dp"
        android:onClick="save"
        android:text="@string/update"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fav" />

</androidx.constraintlayout.widget.ConstraintLayout>