<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".MenuScreen">

    <Button
        android:id="@+id/Display"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#30377F"
        android:fontFamily="@font/artifika"
        android:onClick="launchDisplay"
        android:text="@string/b2"
        android:textSize="12sp"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:icon="@android:drawable/ic_menu_view"
        app:iconGravity="top"
        app:iconPadding="1dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/Search"
        app:layout_constraintEnd_toStartOf="@+id/Favourites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Register"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Register"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#30377F"
        android:fontFamily="@font/artifika"
        android:onClick="launchRegister"
        android:text="@string/b1"
        android:textSize="12sp"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:icon="@android:drawable/ic_menu_save"
        app:iconGravity="top"
        app:iconPadding="1dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/Edit"
        app:layout_constraintEnd_toStartOf="@+id/Display"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Search"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginBottom="374dp"
        android:backgroundTint="#30377F"
        android:fontFamily="@font/artifika"
        android:onClick="launchSearch"
        android:text="@string/b5"
        android:textSize="12sp"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:icon="@android:drawable/ic_menu_search"
        app:iconGravity="top"
        app:iconPadding="1dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Ratings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Edit"
        app:layout_constraintTop_toBottomOf="@+id/Display" />

    <Button
        android:id="@+id/Ratings"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginBottom="374dp"
        android:backgroundTint="#30377F"
        android:fontFamily="@font/artifika"
        android:onClick="launchRatings"
        android:text="@string/b6"
        android:textSize="12sp"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:icon="@android:drawable/star_off"
        app:iconGravity="top"
        app:iconPadding="1dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Search"
        app:layout_constraintTop_toBottomOf="@+id/Favourites" />

    <Button
        android:id="@+id/Edit"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginBottom="374dp"
        android:backgroundTint="#30377F"
        android:fontFamily="@font/artifika"
        android:onClick="launchEdit"
        android:text="@string/b4"
        android:textSize="12sp"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconGravity="top"
        app:iconPadding="1dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register" />

    <Button
        android:id="@+id/Favourites"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="#30377F"
        android:fontFamily="@font/artifika"
        android:onClick="launchFavourites"
        android:text="@string/b3"
        android:textSize="12sp"
        app:cornerRadius="@android:dimen/thumbnail_height"
        app:icon="@android:drawable/ic_menu_add"
        app:iconGravity="top"
        app:iconPadding="1dp"
        app:iconTint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/Ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Display"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>